--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -4,3 +4,20 @@
    align-items: center;
    justify-content: space-between;
 }
+.imgContainer {
+   width: 15px;
+   height: 15px;
+   position: relative;
+}
+
+.social {
+   display: flex;
+   align-items: center;
+   gap: 10px;
+   /* cursor: pointer; */
+}
+
+.icon {
+   cursor: pointer;
+   opacity: 0.6;
+}
