"feats: about us content"

--- a/src/app/about/page.module.css
+++ b/src/app/about/page.module.css
@@ -1,3 +1,40 @@
-.container {
-   background: brown;
+.container {}
+
+.imgContainer {
+   width: 50%;
+   height: 300px;
+   position: relative;
+}
+
+.img {
+   object-fit: cover;
+   filter: grayscale(100%);
+}
+
+.imgText {
+   position: absolute;
+   bottom: 20px;
+   left: 20px;
+   background-color: #53c28b;
+   padding: 5px;
+   color: white;
+}
+
+.textContainer {
+   display: flex;
+   gap: 100px;
+}
+
+.item {
+   flex: 1;
+   margin-top: 50px;
+   display: flex;
+   flex-direction: column;
+   gap: 30px;
+}
+
+.description {
+   font-size: 16px;
+   font-weight: 300;
+   text-align: justify;
 }
