--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -23,8 +23,17 @@
   font-weight: 300;
 }
 
-.img{
-  width: 100%;
-  height: 500;
+.img {
   object-fit: cover;
+  animation: move 2s infinite ease alternate;
+}
+
+@keyframes move {
+  from {
+    transform: translateY(-15px)
+  }
+
+  to {
+    transform: translateY(0px) scale(1.03);
+  }
 }
